# MKL_perf_test

./: CMakeLists.txt  sgemm_cblas.cpp  test.py  test_thread.cpp  test_trans.py
src/: CMakeLists.txt
src/avx/: ReadMe.txt  avx.cpp  avx.vcxproj  avx.vcxproj.filters  avx2_gemm.h  sse_gemm.h  stdafx.cpp
src/test/: avx2_gemm.h  test.cpp
src/test2/: avx2_gemm.h  avx_common.h  test.cpp
src/test3/: test.cpp
